# zoomcamp

./: .gitignore  asd.ipynb  pyproject.toml
homeworks/: testing.ipynb
homeworks/homework_1/: README.md  data_pipeline.ipynb  docker-compose.yaml  main.tf  variables.tf
homeworks/homework_2/: docker-compose.yaml  main.tf  variables.tf
homeworks/homework_2/zoomcamp/: io_config.yaml  metadata.yaml
homeworks/homework_2/zoomcamp/data_exporters/: bigquery.py  gcloud.py
homeworks/homework_2/zoomcamp/data_loaders/: load_green_taxi.py
homeworks/homework_2/zoomcamp/pipelines/green_taxi_etl/: metadata.yaml
homeworks/homework_2/zoomcamp/transformers/: transform.py
homeworks/homework_3/: README.md  docker-compose.yaml  main.tf  variables.tf
homeworks/homework_3/zoomcamp_homework_3/: io_config.yaml  metadata.yaml
homeworks/homework_3/zoomcamp_homework_3/data_exporters/: gcloud.py
homeworks/homework_3/zoomcamp_homework_3/data_loaders/: parquet_loader.py
homeworks/homework_3/zoomcamp_homework_3/pipelines/all_ny_taxi_data/: metadata.yaml
homeworks/homework_3/zoomcamp_homework_3/pipelines/ny_taxi/: metadata.yaml
homeworks/homework_4/models/core/: fact_fhv_trips.sql
homeworks/homework_4/models/staging/: schema.yml  stg_fhv.sql
homeworks/homework_4/zoomcamp/: dbt_project.yml
homeworks/homework_5/: README.md  docker-compose.yml  pyspark.ipynb
workshops/workshop_1/: dlt.ipynb  people.duckdb  people.duckdb.wal
